Fix for wrapping 'Click on any button to start'

--- a/css/main.scss
+++ b/css/main.scss
@@ -226,7 +226,6 @@ h1.landing-page {
 		p {
 			color: $musiclaps-blue;
 			font-size: 12px;
-			letter-spacing: 0.5px;
 			margin-top: 25px;
 			text-transform: uppercase;
 			sup {		
